--- a/src/index.css
+++ b/src/index.css
@@ -78,4 +78,13 @@
   h1 {
     @apply text-[40px] md:text-[64px] font-extrabold leading-[110%];
   }
+  h6 {
+    @apply text-[16px] font-medium h-[46px] flex items-center text-white;
+  }
+}
+
+@layer components {
+  .footer-link {
+    @apply text-[16px] h-[46px] flex items-center text-[#E2E8F0];
+  }
 }
